[project]
name = "RefVault"
version = "0.1.0"
description = "Image tagging and vault service"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "asyncpg",
  "fastapi",
  "psycopg2-binary",
  "pwdlib[argon2]",
  "pydantic",
  "pydantic-settings",
  "pyjwt",
  "python-multipart",
  "pyyaml",
  "sqladmin",
  "sqlalchemy[asyncio]",
  "itsdangerous",
  "uvicorn[standard]",
]

[project.scripts]
refvault = "refvault.main:main"

[project.optional-dependencies]
dev = [
  "aiosqlite",
  "black",
  "coverage",
  "httpx",
  "isort",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["refvault"]
concurrency = ["greenlet"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pytest]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["refvault"]
