[project]
name = "RefVault"
version = "0.1.0"
description = "Image tagging and vault service"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "asyncpg",
  "fastapi",
  "httpx",
  "itsdangerous",
  "psycopg2-binary",
  "pwdlib[argon2]",
  "pydantic",
  "pydantic-settings",
  "pyjwt",
  "pylette",
  "python-multipart",
  "pyyaml",
  "sqladmin",
  "sqlalchemy[asyncio]",
  "uvicorn[standard]",
]

[project.scripts]
refvault = "refvault.main:main"

[project.optional-dependencies]
dev = [
  "aiosqlite",
  "black",
  "coverage",
  "isort",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["refvault"]
concurrency = ["greenlet"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pytest]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["refvault"]
